# backlog

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  docker-compose.yml
assets/: police.txt
src/: actions.rs  main.rs  models.rs  schema.rs
src/api_middleware/: auth_middleware.rs  mod.rs
src/controllers/: backlog.rs  home.rs  mod.rs
src/repositories/: authorization.rs  backlog.rs  employee.rs  mod.rs  unit.rs
